methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:16: error: ';' expected but ',' found.
  if (isFacingTrail()) {avance();baisseBrosse(),leveBrosse()}
                                               ^