methods.slug.SlugHunting.scala.code
def hunt() {def isFacingTrail():Boolean = 

{


if (!estFaceMur()) {avance() ; if (getCouleurSol()==Color.green) {recule() ; return true}

                    else {recule() ; return false}} 

else {return false}
}
while (!estSurBiscuit()) {
  
  
  if (isFacingTrail()) {avance();baisseBrosse(),leveBrosse()}
            else {gauche()}
}
  prendBiscuit()         }


